2016-11-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (associate_internal_references): 
	Remove unused arguments.

2016-11-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/ModulePath.pm.in: Set $top_builddir from 
	$top_srcdir as well as the other way around.  This is so that
	XS modules can be used from tests run from the command-line.

2016-11-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (output): Check for existence of a 
	string before testing equality.

2016-11-01  Gavin Smith  <gavinsmith0123@gmail.com>

	Experimental change to reduce use of normalized labels.

	* tp/Texinfo/Parser.pm (_register_label): For @float's only,
	do not save the normalized HTML target name.  (This does not
	gain anything at the moment because the normalized name is still
	calculated in Parser.pm.)
	* tp/Texinfo/Structuring.pm (number_floats): Check that 
	'node_content' value exists for float instead of 'normalized'.
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert) <@float>,
	* tp/Texinfo/Convert/DocBook.pm (_convert) <@float>: Call
	Texinfo::Convert::NodeNameNormalization::normalize_node to 
	compensate for loss of 'normalized' value.
	* tp/Texinfo/Convert/HTML.pm (_node_id_file),
	* tp/Texinfo/Convert/Converter.pm (_node_filename): Fall back to
	use 'node_content' if 'normalized' is not available.

2016-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_get_target, command_text)
	(_node_id_file): Comments added or changed.

2016-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac (TEXINFO_DTD_VERSION): Bump version to 6.3dev.
	Although the DTD hasn't changed, the meaning has due to change
	in 'type' attribute of 'float' element on 2016-10-16.
	* util/texinfo.dtd: Add 2016 copyright year.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm,
	* tp/Texinfo/Transformations.pm
	(fill_gaps_in_sectioning, insert_nodes_for_sectioning_commands)